HEAD
	+ Change menu name to keep folder open 
	+ Added support for 'markasjunk' plugin
1.3.12
	+ Fix titles and headers
1.3.10
	+ First release