@@ -201,31 +201,42 @@ sub menu
 {
     my ($self, $root) = @_;
 
-    my $folder = new EBox::Menu::Folder(
-                      'name' => 'WebMail',
-                      'text' => $self->printableName(),
-                      'separator' => 'Communications',
-                      'order' => 700,
-    );
+#    XXX commented out until external connections work as intended
+#     my $folder = new EBox::Menu::Folder(
+#                       'name' => 'WebMail',
+#                       'text' => $self->printableName(),
+#                       'separator' => 'Communications',
+#                       'order' => 700,
+#     );
 
-    $folder->add(
-                 new EBox::Menu::Item(
-                        'url' => 'WebMail/Composite/Backend',
-                        'text' => __('Backend')
-                   )
-    );
+#     $folder->add(
+#                  new EBox::Menu::Item(
+#                         'url' => 'WebMail/Composite/Backend',
+#                         'text' => __('Backend')
+#                    )
+#     );
 
-    $folder->add(
+#     $folder->add(
+#                  new EBox::Menu::Item(
+#                         'url' => 'WebMail/View/Options',
+#                         'text' => __('Options')
+#                    )
+        
+
+#        );
+
+
+#     $root->add($folder);
+
+    $root->add(
                  new EBox::Menu::Item(
                         'url' => 'WebMail/View/Options',
-                        'text' => __('Options')
+                        'text' => $self->printableName(),
                    )
         
 
        );
 
-
-    $root->add($folder);
 }
 
 # Method: modelClasses
