@@ -1,6 +1,7 @@
 HEAD
 	+ Change menu name to keep folder open 
 	+ Added support for 'markasjunk' plugin
+	+ Hidden external server configuration until it works for more cases
 1.3.12
 	+ Fix titles and headers
 1.3.10
